--- a/Task3UI/Task3UI.csproj
+++ b/Task3UI/Task3UI.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Task3">
+      <HintPath>..\Task3\bin\Debug\Task3.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
